--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <meta name="description" content="My Awesome Progressive Web Apps">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
     <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">    
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+    <style>body { font-family: "Audiowide", sans-serif;}</style>
+    
   </head>
-  <body>
+  <body class="@font-face">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
